# vision-processor

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  config-minimal.yml  config.0.yml  config.yml  geometry-divA.yml  geometry-divB.yml  geometry-go.yml  geometry-rc24.yml  robot-heights.yml  setup.sh
cmake/: CheckDC1394.cmake  FindSpinnaker.cmake  FindmvIMPACT.cmake
kernel/: backsub.cl  ballssd.cl  bgr2img.cl  bgr2rgba.cl  bgupdate.cl  blobScore.cl  blobridge.cl  blur.cl  botssd.cl  buf2img.cl  bugged_local_convolution.cl  circularize.cl  clstd.h  color.cl  conv.cl  convolution.cl  delta.cl  diff.cl  f2nv12.cl  gradient.cl  grbg2rgba.cl  hough.cl  image2field.cl  matches.cl  midpointssd.cl  perspective.cl  quad2nv12.cl  quad2rgba.cl  raw2quad.cl  resampling.cl  rgb2nv12.cl  rgba2nv12.cl  rggb2img.cl  rggb2rgba.cl  rggbResampling.cl  ringssd.cl  robustInvariant.cl  robust_invariant.cl  satBlobCenter.cl  satCircle.cl  (+7 more)
proto/: ssl_gc_game_event.proto  ssl_gc_referee_message.proto  ssl_vision_detection_tracked.proto  ssl_vision_geometry_legacy.proto  ssl_vision_wrapper.proto  ssl_vision_wrapper_legacy.proto  ssl_vision_wrapper_tracked.proto
python/: binary.py  blob_benchmark.py  cam_viewer.py  camviewer.conf  dataset.py  detection_benchmark.py  geom_publisher.py  geometry_record.py  overlap_benchmark.py  record.py  record_ground_truth.py  ssl-vision-record.py  visionsocket.py
src/: AlignedArray.h  CLArray.h  CameraModel.cpp  CameraModel.h  GroundTruth.cpp  GroundTruth.h  KDTree.h  Mask.cpp  Mask.h  Perspective.cpp  Perspective.h  RLEVector.cpp  RLEVector.h  Resources.cpp  Resources.h  blob_benchmark.cpp  distortion.cpp  distortion.h  geomcalib.cpp  geomcalib.h  geometry_benchmark.cpp  image.cpp  image.h  imagesource.h  main.cpp  opencl.cpp  opencl.h  pattern.h  rtpstreamer.cpp  rtpstreamer.h  spinnakersource.cpp  spinnakersource.h  udpsocket.cpp  udpsocket.h
src/blobs/: hypothesis.cpp  hypothesis.h  kdtree.cpp  kdtree.h  kmeans.cpp  kmeans.h  match.h
src/calib/: Distortion.cpp  Distortion.h  GeomModel.cpp  GeomModel.h  LineDetection.cpp  LineDetection.h
src/driver/: cameradriver.cpp  cameradriver.h  dc1394driver.cpp  dc1394driver.h  mvimpactdriver.cpp  mvimpactdriver.h  opencvdriver.cpp  opencvdriver.h  rawimage.h  spinnakerdriver.cpp  spinnakerdriver.h
src/source/: imagesource.h  mvimpactsource.cpp  mvimpactsource.h  opencvsource.h  spinnakersource.cpp  spinnakersource.h  videosource.h
